--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@mui/material": "^5.15.20",
     "@mui/material-nextjs": "^5.15.11",
     "@reduxjs/toolkit": "^2.2.5",
+    "@types/stylis": "^4.2.6",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "stylis": "^4.3.2",
+    "stylis-plugin-rtl": "^2.1.1"
   },
   "devDependencies": {
     "@types/node": "^20",
