--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
     "@mui/material-nextjs": "^5.15.11",
+    "@prisma/client": "^5.15.1",
     "@reduxjs/toolkit": "^2.2.5",
     "@types/stylis": "^4.2.6",
+    "bcrypt": "^5.1.1",
+    "cookies-next": "^4.2.1",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
@@ -31,6 +34,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
+    "prisma": "^5.15.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
