--- a/package.json
+++ b/package.json
@@ -17,15 +17,20 @@
     "@mui/material-nextjs": "^5.15.11",
     "@prisma/client": "^5.15.1",
     "@reduxjs/toolkit": "^2.2.5",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/stylis": "^4.2.6",
     "bcrypt": "^5.1.1",
     "cookies-next": "^4.2.1",
+    "formik": "^2.4.6",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
     "stylis": "^4.3.2",
-    "stylis-plugin-rtl": "^2.1.1"
+    "stylis-plugin-rtl": "^2.1.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
