--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@prisma/client": "^5.15.1",
     "@reduxjs/toolkit": "^2.2.5",
     "@types/bcrypt": "^5.0.2",
+    "@types/cookie": "^0.6.0",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/stylis": "^4.2.6",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
+    "cookie": "^0.6.0",
     "cookies-next": "^4.2.1",
     "formik": "^2.4.6",
     "jsonwebtoken": "^9.0.2",
