--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-lazy-load": "^4.0.1",
     "react-redux": "^9.1.2",
     "stylis": "^4.3.2",
     "stylis-plugin-rtl": "^2.1.1",
